manifests/portainer/portainer.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
spec:
  type: ClusterIP
  selector:
    app: app-portainer
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: edge
      protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
  namespace: portainer
spec:
  selector:
    matchLabels:
      app: app-portainer
  template:
    metadata:
      labels:
        app: app-portainer
    spec:
      serviceAccountName: portainer-sa-clusteradmin
      containers:
        - name: portainer
          image: portainer/portainer-k8s-beta:linux-amd64
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
              protocol: TCP
            - containerPort: 8000
              protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: portainer
  name: portainer
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - portainer.stackmasters.com
    secretName: portainer-stackmasters-com
  rules:
   - host: portainer.stackmasters.com
     http:
       paths:
       - backend:
           serviceName: portainer
           servicePort: 9000
